force-app/main/default/objects/QuickBooks_Config__mdt/QuickBooks_Config__mdt.object-meta.xml
<CustomObject>
    <label>QuickBooks Config</label>
    <pluralLabel>QuickBooks Configs</pluralLabel>
</CustomObject>