force-app/main/default/objects/QuickBooks_Config__mdt/fields/Payment_Account_Id__c.field-meta.xml
<CustomField>
    <fullName>Payment_Account_Id__c</fullName>
    <label>Payment Account Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>