force-app/main/default/objects/QuickBooks_Config__mdt/fields/Realm_Id__c.field-meta.xml
<CustomField>
    <fullName>Realm_Id__c</fullName>
    <label>Realm Id</label>
    <length>50</length>
    <type>Text</type>
</CustomField>