force-app/main/default/objects/QuickBooks_Config__mdt/fields/Reimbursable_Category_Id__c.field-meta.xml
<CustomField>
    <fullName>Reimbursable_Category_Id__c</fullName>
    <label>Reimbursable Category Id</label>
    <length>100</length>
    <type>Text</type>
</CustomField>